--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
+# Created by https://www.toptal.com/developers/gitignore/api/python,pycharm
+# Edit at https://www.toptal.com/developers/gitignore?templates=python,pycharm
+
+### PyCharm ###
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+
+# User-specific stuff
+.idea/
+
+# File-based project format
+*.iws
+
+# IntelliJ
+out/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
